styles/base.css
h1,
h2,
h3 {
    font-weight: 700;
}

body {
    margin: 0;
    background-color: #f4f4f4;
    color: #333333;
    font-family: "Montserrat", Arial, Helvetica, sans-serif;
    line-height: 1.6;
}

header,
nav,
footer {
    width: 100%;
}

header {
    background-color: #2e5c85;
    color: #ffffff;
    text-align: center;
    padding: 1rem 0;
}

#course-title {
    display: block;
    font-size: 1.5rem;
}

nav {
    background-color: #2e5c85;
    display: flex;
    justify-content: center;
    padding: 0.5rem 0;
}

nav ul {
    list-style: none;
    display: flex;
    flex-direction: initial;
    margin: 0;
    padding: 0;
    gap: 6rem;
}

nav a {
    color: #ffffff;
    text-decoration: none;
    font-weight: bold;
    padding: 0.5rem 0.8rem;
    border-radius: 5px;
}

nav a:hover {
    color: #e69faf;
    background-color: rgba(255, 255, 255, 0.1);
}

main {
    width: 1000px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 2rem;
    padding: 0;
}

main h1 {
    grid-column: 1 / -1;
    text-align: center;
}

.card {
    background-color: #ffffff;
    border: 1px solid #dddddd;
    border-radius: 8px;
    padding: 1rem;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
}

.card>h2 {
    background-color: #2e5c85;
    color: #ffffff;
    text-align: center;
    padding: 0.8rem;
    margin: -1rem -1rem 1rem -1rem;
    border-radius: 8px 8px 0 0;
}

.card h3 {
    background: none;
    color: #2e5c85;
    text-align: center;
    margin: 0.5rem 0 1rem 0;
    font-size: 1.2rem;
}

.card-content {
    display: grid;
    grid-template-columns: 1fr 150px;
    gap: 1rem;
    align-items: start;
}

.card-content.cochabamba {
    grid-template-columns: 150px 1fr;
    align-items: start;
}

.card-content img {
    width: 150px;
    height: 150px;
    object-fit: cover;
    border-radius: 8px;
}

figure {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 0;
}

figcaption {
    margin-top: 0.5rem;
    font-size: 0.9rem;
    color: #555555;
    text-align: left;
}

.card ul li a {
    color: #2e5c85;
    text-decoration: none;
    display: inline-block;
    margin: 0.3rem 0;
}

.card ul li a:hover {
    text-decoration: underline;
}

footer {
    background-color: #2e5c85;
    color: #ffffff;
    text-align: center;
    padding: 1rem 0;
}

@media (max-width: 768px) {
    main {
        grid-template-columns: 1fr;
    }

    .card-content {
        grid-template-columns: 1fr;
    }
}

